tests/snapshots/sfc/ts/script_setup__generic_component_with_complex_constraint.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 152
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { withModifiers as _withModifiers, renderSlot as _renderSlot, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    initialState: { type: null, required: true },
    onSubmit: { type: Function, required: true }
  },
  setup(__props: any) {

const formData = ref<FormShape | null>(null)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("form", {
    onSubmit: _withModifiers(() => {}, ["prevent"])
  }, [
    _renderSlot(_ctx.$slots, "default", { data: formData.value })
  ], 40 /* PROPS, NEED_HYDRATION */, ["onSubmit"]))
}
}

})
