tests/snapshots/sfc/ts/script_setup__generic_component_with_extends.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 152
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    value: { type: null, required: true },
    options: { type: Array, required: true }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("select", null, [
    (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(__props.options, (opt) => {
      return (_openBlock(), _createElementBlock("option", {
        key: opt,
        value: opt
      }, _toDisplayString(opt), 9 /* TEXT, PROPS */, ["value"]))
    }), 128 /* KEYED_FRAGMENT */))
  ]))
}
}

})
