tests/snapshots/sfc/ts/script_setup__generic_component_with_multiple_type_params.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 152
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    items: { type: Array, required: true },
    keyField: { type: null, required: true }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(__props.items, (item) => {
    return (_openBlock(), _createElementBlock("div", { key: String(item[__props.keyField]) }, _toDisplayString(item), 1 /* TEXT */))
  }), 128 /* KEYED_FRAGMENT */))
}
}

})
