tests/snapshots/sfc/ts/script_setup__interface_with_async_callback.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 152
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


interface Props {
  onSubmit: (data: FormData) => Promise<void>;
  onError?: (error: Error) => void;
}


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    onSubmit: { type: Function, required: true },
    onError: { type: Function, required: false }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("form", null, "Submit"))
}
}

})
