tests/snapshots/sfc/ts/script_setup__multiline_const_with_type_annotation.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


interface LayoutConfig {
  name: string;
  columns: number;
}


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const defaultLayout: LayoutConfig = {
  name: "default",
  columns: 12,
};
const secondLayout: LayoutConfig = {
  name: "secondary",
  columns: 6,
};

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(defaultLayout.name) + " " + _toDisplayString(secondLayout.columns), 1 /* TEXT */))
}
}

})
