tests/snapshots/sfc/ts/script_setup__multiline_intersection_type_definition.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


type Combined =
  & { name: string }
  & { age: number };


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const data: Combined = { name: 'test', age: 10 };

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(data.name) + " - " + _toDisplayString(data.age), 1 /* TEXT */))
}
}

})
