tests/snapshots/sfc/ts/script_setup__multiline_union_type_definition.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


type ButtonVariant =
  | { type: 'link'; href: string }
  | { type: 'button'; onClick: () => void };


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const variant: ButtonVariant = { type: 'link', href: '/home' };

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(variant.type), 1 /* TEXT */))
}
}

})
