tests/snapshots/sfc/ts/script_setup__multiple_top_level_await_calls.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { withAsyncContext as _withAsyncContext, defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, unref as _unref } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  async setup(__props) {

let __temp: any, __restore: any

const user =  (
  ([__temp,__restore] = _withAsyncContext(() => fetchUser())),
  __temp = await __temp,
  __restore(),
  __temp
)
const posts =  (
  ([__temp,__restore] = _withAsyncContext(() => fetchPosts(user.id))),
  __temp = await __temp,
  __restore(),
  __temp
)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref(user).name) + " has " + _toDisplayString(_unref(posts).length) + " posts", 1 /* TEXT */))
}
}

})
